--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://file.myfontastic.com/Hkh9iNwEHRpV9egwVYXrpE/icons.css" rel="stylesheet">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   
 </head>
 
@@ -62,9 +66,7 @@
           </div>
           <div class="carousel-item">
             <img src="images/img/slider3.png" class="d-block w-100" alt="Disposotivos a la venta Baterias">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Mejores Dispositivos</h5>
-              <p>Contamos con los mejores dispositivos del mercado.</p>
+            <div class="d-none d-md-block">
             </div>
           </div>
         </div>
@@ -85,7 +87,7 @@
     <section class="welcome">
       <div class="flexbox-container">
         <div>
-          <h1>Bienvenidos a Nuestra Compañia</h1></br>
+         <h1 class="animate__animated animate__bounce">An animated element</h1></br>
           <p>Somos un almacén de venta de repuestos dedicados a las autopartes eléctricas,
             reparación de automóviles y camionetas en cuanto a lo que se refiere cómo “mecánica rápida”,
             tenemos una amplia experiencia en la gran mayoría de marcas de vehículos,
@@ -101,11 +103,11 @@
     <!-- ---------------------------------------  Services  -------------------------------------- -->
     <!-- ----------------------------------------------------------------------------------------- -->
     <section class="services" id="services">
-      <h2>Servicios</h2>
-      <p>Ofrecer soluciones eficientes,<br>
+      <h2 style="text-decoration: underline;">SERVICIOS</h2></br>
+     <!-- <p>Ofrecer soluciones eficientes,<br>
         confiables y duraderas tanto en todo lo relacionado con el mantenimiento y reparación de vehículos,<br>
         cómo en la venta de autopartes eléctricas. <br>
-        Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>
+        Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>-->
       <div class="d-flex flex-wrap">
         <div class="card">
           <img src="images/galeria/auto2.JPG" class="card-img-top" alt="Sincronizacion">
@@ -175,67 +177,6 @@
         </div>
       </div>
     </section>
-
-    <!-- ----------------------------------------------------------------------------------------- -->
-    <!-- ---------------------------------------  MarksCa  --------------------------------------- -->
-    <!-- ----------------------------------------------------------------------------------------- -->
-    <section class="marksCarrusel">
-      <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-interval="10000">
-            <img src="images/marcas/bg.png" class="d-block w-100" alt="Chevrolet">
-          </div>
-          <div class="carousel-item" data-interval="2000">
-            <img src="images/marcas/bg1.png" class="d-block w-100" alt="Fiat">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg2.png" class="d-block w-100" alt="Ford">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg3.png" class="d-block w-100" alt="Great Wall">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg4.png" class="d-block w-100" alt="Hiunday">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg5.png" class="d-block w-100" alt="Nissan">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg6.png" class="d-block w-100" alt="Mitsubishi">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg7.png" class="d-block w-100" alt="Audi">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg8.png" class="d-block w-100" alt="kia">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg9.png" class="d-block w-100" alt="Nissan">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg10.png" class="d-block w-100" alt="reanault">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg11.png" class="d-block w-100" alt="suzuki">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg12.png" class="d-block w-100" alt="Toyota">
-          </div>
-          <div class="carousel-item">
-            <img src="images/marcas/bg13.png" class="d-block w-100" alt="Wolswaguen">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </section>
-
     <!-- ----------------------------------------------------------------------------------------- -->
     <!-- ---------------------------------------  Galery  --------------------------------------- -->
     <!-- ----------------------------------------------------------------------------------------- -->
@@ -255,11 +196,12 @@
             <div class="card-body d-flex align-content-end flex-wrap">
               <figure class="figure">
                 <img src="images/galeria/prod2.JPG" class="figure-img img-fluid rounded" alt="Bateria Ford"
-                  onclick="servicios1()"/>
+                  >
                 <figcaption class="figure-caption text-right">Bateria Ford.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/prod3.JPG" class="figure-img img-fluid rounded" alt="Bateria Bosch">
+                <img src="images/galeria/prod3.JPG" class="figure-img img-fluid rounded" alt="Bateria Bosch" 
+                onclick="servicios1()"/>
                 <figcaption class="figure-caption text-right">Bateria Bosch.</figcaption>
               </figure>
               <figure class="figure">
@@ -279,8 +221,8 @@
                 <figcaption class="figure-caption text-right">Bateria Bosch S4.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/prod8.JPG" class="figure-img img-fluid rounded" alt="Bateria Bosch S5">
-                <figcaption class="figure-caption text-right">Bateria Bosch S5.</figcaption>
+                <img src="images/galeria/prod23.JPG" class="figure-img img-fluid rounded" alt="Bateria Bosch S5">
+                <figcaption class="figure-caption text-right">Optima Batteries.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/galeria/prod20.JPG" class="figure-img img-fluid rounded" alt="Bateria Silver Cast">
@@ -300,7 +242,8 @@
                 <figcaption class="figure-caption text-right">Bateria Extrema Titanio.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/prod25.JPG" class="figure-img img-fluid rounded" alt="Bateria Mac Gold Plus">
+                <img src="images/galeria/prod25.JPG" class="figure-img img-fluid rounded" alt="Bateria Mac Gold Plus"
+                onclick="servicios2()"/>
                 <figcaption class="figure-caption text-right">Bateria Mac Gold Plus.</figcaption>
               </figure>
             </div>
@@ -326,7 +269,7 @@
             <h2 class="mb-0">
               <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
                 data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Otros Productos
+               OTROS PRODUCTOS
               </button>
             </h2>
           </div>
@@ -378,7 +321,7 @@
                 <figcaption class="figure-caption text-right">Total parts.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/prod23.JPG" class="figure-img img-fluid rounded" alt="Optima Batteries">
+                <img src="" class="figure-img img-fluid rounded" alt="Optima Batteries">
                 <figcaption class="figure-caption text-right">Optima Batteries.</figcaption>
               </figure>
               <figure class="figure">
@@ -390,6 +333,53 @@
         </div>
       </div>
     </section>
+     <!-- ----------------------------------------------------------------------------------------- -->
+    <!-- ---------------------------------------  MarksCa  --------------------------------------- -->
+    <!-- ----------------------------------------------------------------------------------------- -->
+    <section class="marksCarrusel" style="background:#090A0B;">
+      <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" >
+          <div class="carousel-item active" data-interval="10000">
+            <img src="images/Marcas Baterias/ACDelco_logo.svg.png" class="d-block w-100" alt="Chevrolet">
+          </div>
+          <div class="carousel-item" data-interval="2000">
+            <img src="images/Marcas Baterias/Bosch_logo-3.png" class="d-block w-100" alt="Fiat">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Marcas Baterias/Imagen1.png" class="d-block w-100" alt="Ford">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Marcas Baterias/logo-tab-header.png" class="d-block w-100" alt="Great Wall">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Marcas Baterias/MAC_logo.png" class="d-block w-100" alt="Hiunday">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Marcas Baterias/motopartes-marca-coexitoevolution.png" class="d-block w-100" alt="Nissan">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Marcas Baterias/motorcraft-logo.png" class="d-block w-100" alt="Mitsubishi">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Marcas Baterias/optima-batteries-vector-logo.png" class="d-block w-100" alt="Audi">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Marcas Baterias/unnamed.png" class="d-block w-100" alt="kia">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Marcas Baterias/Varta-Logo.svg.png" class="d-block w-100" alt="Nissan">
+          </div>
+        <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+   
 
     <!-- ----------------------------------------------------------------------------------------- -->
     <!-- ---------------------------------------     We    --------------------------------------- -->
@@ -500,7 +490,7 @@
 
         </div>
         <div class="row">
-          <img src="https://www.flaticon.com/svg/static/icons/svg/179/179328.svg">
+          <img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111463.svg">
           <a href="">Siguenos en Instagram</a>
 
         </div>
